images added; background for contactHeader set

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,8 +3,22 @@ body{
 	p{
 		font-size: 20px;
 	}
+	.contactHeader {
+		background-image: url("../images/imagination.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		height: 810px;
+		max-width: 1440px;
+	}
+	.name {
+		position: absolute;
+		left: 25%;
+		top: 65%;
+		h2, h3 {
+			color: #f7b480;
+		}
+	}
 }
-
 p{
 	font-weight: 900;
 }
