--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,18 @@ body {
   max-width: 1440px; }
   body p {
     font-size: 20px; }
+  body .contactHeader {
+    background-image: url("../images/imagination.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 810px;
+    max-width: 1440px; }
+  body .name {
+    position: absolute;
+    left: 25%;
+    top: 65%; }
+    body .name h2, body .name h3 {
+      color: #f7b480; }
 
 p {
   font-weight: 900; }
