--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,26 @@
 body {
+  font-family: 'Roboto', sans-serif;
   max-width: 1440px; }
-  body p {
-    font-size: 20px; }
-
-p {
-  font-weight: 900; }
+  body .contactme {
+    height: 100px;
+    color: white;
+    background-color: #F76025; }
+    body .contactme .contactInfo {
+      padding-top: 23px;
+      margin-left: 40px;
+      width: 50%; }
+      body .contactme .contactInfo .floatbox {
+        margin: auto;
+        display: block;
+        width: 150px; }
+        body .contactme .contactInfo .floatbox a {
+          line-height: 23px;
+          margin-left: 10px;
+          float: left;
+          color: white;
+          text-decoration: none; }
+        body .contactme .contactInfo .floatbox span {
+          float: left;
+          clear: both; }
 
 /*# sourceMappingURL=styles.css.map */
