--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,10 +12,10 @@ body{
 	}
 	.name {
 		position: absolute;
-		left: 25%;
-		top: 65%;
-		h2, h3 {
-			color: #f7b480;
+		left: 15%;
+		top: 50%;
+		h1, h2, h3 {
+			color: white;
 		}
 	}
 }
