--- a/css/styles.css
+++ b/css/styles.css
@@ -122,5 +122,12 @@ body {
           height: 25px;
           display: inline-block;
           margin: 0 10px 0 0; }
+  body .breaker {
+    margin: 20px 0;
+    height: 25px;
+    background-image: url(../images/d20.png), url(../images/d20.png), url(../images/d20.png);
+    background-size: 25px 25px, 25px 25px, 25px 25px;
+    background-repeat: no-repeat,  no-repeat, no-repeat;
+    background-position: 50%,  70%, 30%; }
 
 /*# sourceMappingURL=styles.css.map */
