--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,20 +118,31 @@ body{
 		}
 	}
 	.experience{
+		  padding: 40px 0;
+		  padding: 20px 0 40px 0;
 		.companybox{
 			margin: auto;
 			display: block;
 			width: 80%;
+			display: flex;
+			flex-wrap: wrap;
+			@media (max-width: 700px){
+				display: block;
+				text-align: center;
+			}
 			.company{
 				width: 30%;
-				display: inline-block;
+				margin: auto;
 				h2{
 					font-size: 1.5em;
 				}
 			}
 			.details{
 				width: 70%;
-				display: inline-block
+				margin: inherit;
+				p {
+					margin-left: 10px; 
+				}
 			}
 		}
 	}
