--- a/css/styles.scss
+++ b/css/styles.scss
@@ -229,6 +229,12 @@ body{
 				.set1img{
 					img{
 						margin: 0 5px;
+						@media (max-width: 750px){
+						margin: 0 2px;
+						}	
+					}
+					@media (min-width: 601px) and (max-width: 619px) {
+						padding-left: 30px;											
 					}				
 					width:50%;
 				}
@@ -243,13 +249,24 @@ body{
 					font-size: 1.2em;
 					margin-left: 10%;
 					width: 50%;
+					#rwdShort {display: none;}
 					@media (max-width: 600px){
 						margin-left: 5%;
+					}
+					@media (min-width: 600px) and (max-width: 670px) {
+						#rwdLong {display: none;}
+						#rwdShort {display: block;}						
+					}
+					@media (max-width: 950px){
+						.abv {display: none;}
 					}
 				}
 				.set2img{
 					img{
 						margin: 0 5px;
+						@media (max-width: 750px){
+						margin: 0 2px;
+						}	
 					}
 					width:50%;
 				}
