--- a/css/styles.scss
+++ b/css/styles.scss
@@ -144,7 +144,7 @@ body{
 					position: absolute;
 					background-color: purple;
 					z-index: 100;
-					opacity: 1;
+					opacity: 0;
 					height: 150px;
 					width: 200px;
 				    transition: opacity .75s ease-in-out;
@@ -183,7 +183,8 @@ body{
 				}
 				p{
 					color: white;
-					margin-top: 35px;
+					margin-top: 10px;
+					line-height: 16px;
 				}
 				#webOp1 {
 					@media (max-width: 600px) {
