make cat-clicker/admin  mobile F

--- a/links/Cat-Clicker/css/mobile.css
+++ b/links/Cat-Clicker/css/mobile.css
@@ -25,6 +25,12 @@
 span {
 	font-size: 12px;
 }
+
+@media (orientation: portrait) {
+	.hide {
+		float: right;
+	}
+}
 @media (orientation: landscape) {
 	#namesList {
 		width: 460px;
