--- a/links/Bugg-Her/css/style.css
+++ b/links/Bugg-Her/css/style.css
@@ -5,6 +5,7 @@ body {
     text-align: center;
     background-size: auto;
     background-position: left top;
+    background-repeat: no-repeat;
 }
 canvas {
 	float: left;
