--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
       position: absolute;
       text-align: center;
       width: 200px;
-      right: 10%;
+      right: 15%;
       top: 75px; }
       body .contactHeader .name a {
         cursor: pointer;
@@ -280,5 +280,12 @@ body {
     background-size: 25px 25px, 25px 25px, 25px 25px;
     background-repeat: no-repeat,  no-repeat, no-repeat;
     background-position: 50%,  70%, 30%; }
+ @media (min-width: 1440px) {
+  section {
+    width: 1440px;
+    margin-left: calc((100vw - 1440px) / 2);
+    margin-right: auto;
+  }
+ }
 
 /*# sourceMappingURL=styles.css.map */
